Add save category to instructor